2nd/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: short-app-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: short-app
